# cms

./: README.md  render.yaml
api/: config.toml  permissions.json  pyproject.toml
api/cms/: __init__.py
api/cms/app/: app.py  lifespan.py  middlewares.py  server.py  setup.py
api/cms/auth/: dependency.py  exception_handler.py  exceptions.py  models.py  schemas.py  views.py
api/cms/batch/: exceptions.py  models.py  repository.py  views.py
api/cms/batch/migrations/: 202506280405_initial.py
api/cms/departments/: exceptions.py  models.py  repository.py  views.py
api/cms/departments/migrations/: 202506231626_initial.py
api/cms/parents/: exceptions.py  models.py  repository.py  schemas.py  views.py
api/cms/parents/migrations/: 202506080839_initial.py  202506081137_students_parents.py  202506200708_initial.py
api/cms/permissions/: exceptions.py  models.py  permissions.json  repository.py  schemas.py  views.py
api/cms/permissions/migrations/: 202506021436_initial.py  202506131242_initial.py
api/cms/programs/: exceptions.py  models.py  repository.py  views.py
api/cms/programs/migrations/: 202506260323_initial.py
api/cms/schools/: exceptions.py  models.py  repository.py  views.py
api/cms/schools/migrations/: 202506231302_initial.py
api/cms/sessions/: exceptions.py  models.py  repository.py  schemas.py  utils.py  views.py
api/cms/sessions/migrations/: 202506031156_initial.py  (+1 more)
api/cms/staff/: exceptions.py  models.py  repository.py  schemas.py  views.py
api/cms/students/: exceptions.py  models.py  repository.py  schemas.py  utils.py  views.py
api/cms/users/: exceptions.py  models.py  repository.py  schemas.py  views.py
api/cms/utils/: config.py  exceptions.py  hash.py  logging.py  migrations.py  minio.py  postgres.py  setup.py
(+21 files in other folders)
