[project]
name = "cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dhwanil Shah", email = "itzdhwanil@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]

[project.scripts]
cms = "cms:main"

[build-system]
requires = ["uv_build>=0.7.3,<0.8"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "cms"
module-root = ""

